[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rearden"
version = "0.0.1"
authors = [
    {name="Sergey Polivin", email="s.polivin@gmail.com"},
]
description = "Library of useful data structures for data preprocessing, vizualizations and grid search"
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "matplotlib >= 3.3.4",
    "pandas >= 1.2.4",
    "numpy >= 1.24.3",
    "scikit-learn >= 1.1.3",
    "seaborn >= 0.11.1",
    "statsmodels >= 0.13.2",
]

[project.optional-dependencies]
precommit = [
    "pre-commit >= 3.3.2",
]
linters = [
    "darglint >= 1.8.1",
    "flake8 >= 5.0.0",
    "flake8-bandit >= 4.1.1",
    "flake8-isort >= 6.0.0",
    "flake8-black >= 0.3.6",
    "flake8-pyproject >= 1.2.3",
]
formatters = [
    "autoflake >= 2.1.1",
    "isort >= 5.12.0",
    "black >= 23.3.0",
]

[project.urls]
"Homepage" = "https://github.com/spolivin/rearden"
"Bug Tracker" = "https://github.com/spolivin/rearden/issues"
"Pull requests" = "https://github.com/spolivin/rearden/pulls"
"Source" = "https://github.com/spolivin/rearden/tree/master/src/rearden"

[tool.setuptools.packages.find]
where = ["src"]

[tool.autoflake]
in-place = true
remove-all-unused-imports = true
remove-unused-variables = true

[tool.isort]
profile = "black"
line_length = 79

[tool.black]
line-length = 79

[tool.flake8]
strictness = "long"
ignore = [
    "E501",
    "DAR003",
    "DAR103",
    "I001",
    "I004",
    "I005",
    "W503",
]
