[metadata]
name = rearden
author = Sergey Polivin
author_email = s.polivin@gmail.com
version = attr: rearden.__version__
description = Library of useful data structures for data preprocessing, vizualizations and grid search
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE.txt
project_urls =
    Homepage = https://github.com/spolivin/rearden
    Bug-Tracker = https://github.com/spolivin/rearden/issues
    Pull-requests = https://github.com/spolivin/rearden/pulls
    Source = https://github.com/spolivin/rearden/tree/master/src/rearden
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir=
    =src
packages=find:
python_requires= >=3.9
install_requires=
    matplotlib >= 3.3.4
    pandas >= 1.2.4
    numpy >= 1.24.3
    scikit-learn >= 1.1.3
    seaborn >= 0.11.1
    statsmodels >= 0.13.2

[options.packages.find]
where=src

[options.extras_require]
linters =
    darglint >= 1.8.1
    flake8 >= 6.0.0
    flake8-bandit >= 4.1.1
    flake8-bugbear >= 23.7.10
    flake8-docstrings >= 1.7.0
    flake8-builtins >= 2.1.0
    flake8-eradicate >= 1.5.0
    pre-commit >= 3.3.2
formatters =
    isort >= 5.12.0
    black >= 23.3.0
others =
    autoflake >= 2.1.1
    pyupgrade >= 3.10.1
    codespell >= 2.2.4
